[package]
name = "reverb"
version = "0.1.0"
edition = "2018"
description = "Simple websocket broadcast server with rooms"
readme = "README.md"
homepage = "https://github.com/celeo/reverb"
repository = "https://github.com/celeo/reverb"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = []
categories = []

[dependencies]
axum = { version = "0.2.3", features = ["ws"] }
futures = "0.3.16"
log = "0.4.14"
pretty_env_logger = "0.4.0"
structopt = "0.3.22"
tokio = { version = "1.10.1", features = ["full"] }
tower = { version = "0.4.8", features = ["util"] }
